--- a/modelicaml/org.openmodelica.modelicaml.gen.modelica/plugin.xml
+++ b/modelicaml/org.openmodelica.modelicaml.gen.modelica/plugin.xml
@@ -228,6 +228,55 @@
          </toolbar>
       </menuContribution>
    </extension>-->
+   
+   
+   <!-- THIS is a temp. soluation. We "reactivated" the old validation because (up to now 14.08.2012) 
+   the EMF Validation (v1.6.0) is not supported in Eclipse 3.8 (Juno) --> 
+   
+    <extension point="org.eclipse.ui.menus">
+      <menuContribution
+            allPopups="false"
+            locationURI="toolbar:org.eclipse.ui.main.toolbar">
+         <toolbar
+               id="org.openmodelica.modelicaml.toolbar.validation.OBSOLETE"
+               label="ModelicaML Validation">
+            <command
+                  commandId="org.openmodelica.modelicaml.gen.modelica.commands.ValidateModelicaMLModel"
+                  icon="icons/validate.gif"
+                  label="Validate ModelicaML Model (entire model)"
+                  style="push"
+                  tooltip="Validate ModelicaML Model (entire model)">
+               <visibleWhen>
+                  <with
+                        variable="activeEditorId">
+                     <equals
+                           value="org.eclipse.papyrus.infra.core.papyrusEditor">
+                     </equals>
+                  </with>
+               </visibleWhen>
+            </command>
+            <visibleWhen
+                  checkEnabled="false">
+               <with
+                     variable="activeWorkbenchWindow.activePerspective">
+                  <equals
+                        value="org.openmodelica.modelicaml.perspective">
+                  </equals>
+               </with>
+            </visibleWhen>
+         </toolbar>
+      </menuContribution>
+   </extension>
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
    <extension
          point="org.eclipse.ui.commands">
       <command
