--- a/modelicaml/org.openmodelica.modelicaml.validation/plugin.xml
+++ b/modelicaml/org.openmodelica.modelicaml.validation/plugin.xml
@@ -43,6 +43,25 @@
    </extension>
    -->
    <extension
+         point="org.eclipse.ui.views">
+      <view
+            allowMultiple="false"
+            category="org.openmodelica.modelicaml.category"
+            class="org.openmodelica.modelicaml.validation.views.ModelicaMLValidationView"
+            icon="icons/validate.gif"
+            id="org.openmodelica.modelicaml.validation.view"
+            name="ModelicaML Validation"
+            restorable="true">
+         <description>
+            This view displays the validation errors and messages detected by the ModelicaML validator.
+         </description>
+      </view>
+   </extension>
+   
+   
+   <!-- TODO: Reactivate this menu as soon as the EMF Validation is supported in Eclipse 3.8 (Juno)  -->
+   <!--
+   <extension
          point="org.eclipse.ui.menus">
       <menuContribution
             allPopups="false"
@@ -77,26 +96,9 @@
          </toolbar>
       </menuContribution>
    </extension>
-   <extension
-         point="org.eclipse.ui.views">
-      <!--<category
-            id="org.openmodelica.modelicaml.validation.views.category1"
-            name="ModelicaML Validation">
-      </category>
-      -->
-      <view
-            allowMultiple="false"
-            category="org.openmodelica.modelicaml.category"
-            class="org.openmodelica.modelicaml.validation.views.ModelicaMLValidationView"
-            icon="icons/validate.gif"
-            id="org.openmodelica.modelicaml.validation.view"
-            name="ModelicaML Validation"
-            restorable="true">
-         <description>
-            This view displays the validation errors and messages detected by the ModelicaML validator.
-         </description>
-      </view>
-   </extension>
+   -->
+   
+   
    <extension
          point="org.eclipse.ui.commands">
       <!--
