--- a/modelicaml/org.openmodelica.modelicaml.modelica.importer/plugin.xml
+++ b/modelicaml/org.openmodelica.modelicaml.modelica.importer/plugin.xml
@@ -52,6 +52,9 @@
          name="OMC Modelica Models Loading"
          point="org.eclipse.core.resources.markers">
       <super
+            type="org.eclipse.emf.ecore.diagnostic">
+      </super>
+      <super
             type="org.eclipse.core.resources.marker">
       </super>
       <persistent
