MOD: validation constraint group name MOD: preference pages (spelling, wording)

--- a/modelicaml/org.openmodelica.modelicaml.preferences/plugin.xml
+++ b/modelicaml/org.openmodelica.modelicaml.preferences/plugin.xml
@@ -11,20 +11,20 @@
       <page
             category="org.openmodelica.modelicaml.preferences.mainpage"
             class="org.openmodelica.modelicaml.preferences.impl.ModelicaMLOMCPreferencePage"
-            id="org.openmodelica.modelicaml.preferences.ModelicaMLPreferencePage"
-            name="ModelicaML OpenModelica Compiler Settings">
+            id="org.openmodelica.modelicaml.preferences.omc"
+            name="OpenModelica Compiler Settings">
       </page>
       <page
             category="org.openmodelica.modelicaml.preferences.mainpage"
             class="org.openmodelica.modelicaml.preferences.impl.ModelicaMLSimulationPage"
-            id="org.openmodelica.modelicaml.preferences.ModelicaMLPreferencePage"
-            name="ModelicaML Simulation Settings">
+            id="org.openmodelica.modelicaml.preferences.simulation"
+            name="Simulation Settings">
       </page>
       <page
             category="org.openmodelica.modelicaml.preferences.mainpage"
             class="org.openmodelica.modelicaml.preferences.impl.ModelicaMLModelicaModelsSynchronization"
             id="org.openmodelica.modelicaml.preferences.ModelicaMLModelicaModelsSynchronization"
-            name="ModelicaML Modelica Model Synchronization Settings">
+            name="Modelica Model Synchronization Settings">
       </page>
    </extension>
    <extension
