MOD: preference pages for editors removed BUG FIX: locate in report dialog MOD: preference page for VeM generation (generate verdict) MOD: new relations dialog (requirements ID and name) MOD: analyze sim. results dialog (record only requirement status and clients option is disabled by default)

--- a/modelicaml/org.openmodelica.modelicaml.preferences/plugin.xml
+++ b/modelicaml/org.openmodelica.modelicaml.preferences/plugin.xml
@@ -10,6 +10,12 @@
       </page>
       <page
             category="org.openmodelica.modelicaml.preferences.mainpage"
+            class="org.openmodelica.modelicaml.preferences.impl.ModelicaMLVeMGeneration"
+            id="org.openmodelica.modelicaml.preferences.vemGeneration"
+            name="Verification Models Generation">
+      </page>
+      <page
+            category="org.openmodelica.modelicaml.preferences.mainpage"
             class="org.openmodelica.modelicaml.preferences.impl.ModelicaMLOMCPreferencePage"
             id="org.openmodelica.modelicaml.preferences.omc"
             name="OpenModelica Compiler Settings">
